--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body {
   font-family: "Open Sans", sans-serif;
   background-color: rgb(20, 14, 71);
+  position: relative;
+  margin: 0;
+  padding: 0;
 }
 img {
   position: absolute;
@@ -15,10 +18,14 @@ img {
 .menu {
   display: flex;
   color: #fff;
+  margin-right: 10px;
 }
 ul {
   display: flex;
   list-style: none;
+}
+li {
+  margin-left: 15px;
 }
 .logo {
   flex: 1;
@@ -62,20 +69,22 @@ input {
   color: rgb(177, 177, 88);
   margin-top: 10px;
   padding: 10px;
+  padding-left: 20px;
   border-radius: 20px 20px 0px 0px;
-  position: relative;
-  bottom: 0px;
+  position: absolute;
+  bottom: -650px;
   left: 0px;
   right: 0px;
 }
 
 @media only screen and (min-width: 786px) {
   body {
+    position: relative;
     /* padding-bottom: 100px; */
   }
   .content {
-    position: fixed;
-    bottom: 0px;
+    position: absolute;
+    bottom: -650px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -85,14 +94,6 @@ input {
     flex: 1;
     margin-right: 40px;
     max-width: 500px;
-  }
-  .contacts {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-  }
-  .contact {
-    margin: 20px;
   }
   img {
     position: absolute;
